--- a/rails/blogger/app/views/articles/show.html.erb
+++ b/rails/blogger/app/views/articles/show.html.erb
@@ -1,3 +1,6 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p>
 <%= link_to "<< Return to articles list", articles_path %>
+<%= link_to "edit", edit_article_path(@article)  %>
+<%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %>
+
